# kubenyx

./: .gitignore  README.md  flake.nix
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  gc.yml  showcase.yml  snapshot-mint.yml
air/: SKILL.md
air/context/: OVERVIEW.md  architecture.md  implementation-guide.md  interface-design.md
air/context/research/: control-plane-pki.md  fast-start.md  networking-addons.md  prior-art.md  runtime-node.md
air/v0.1/: OVERVIEW.org  architecture.org  control-plane.org  datastore.org  dns-addons.org  flake-packaging.org  networking.org  node-runtime.org  pki.org  vm-tests.org
air/v0.1/core/: architecture.org  control-plane.org  datastore.org  flake-packaging.org  node-runtime.org  pki.org
air/v0.1/harness/: embedding-gaps.org  harness.org  vm-tests.org
air/v0.1/hosts/: byod.org
air/v0.1/microvm/: kvm-validation.org  microvm.org  multinode-microvm.org
air/v0.1/network/: dns-addons.org  ipv6.org  networking.org
air/v0.1/quorum/: cp-growth.org  durable-ha.org  quorum-mesh.org
air/v0.1/snapshot/: ci-artifacts.org  portable-snapshots.org  snapshot-restore.org  test-amplification.org
air/v0.2/: OVERVIEW.org  kvm-validation.org  microvm.org  multinode-microvm.org  snapshot-restore.org
air/v0.3/: OVERVIEW.org  durable-ha.org
air/v0.4/: OVERVIEW.org  byod.org  ipv6.org  prebake.org
air/v0.5/: OVERVIEW.org  cp-growth.org  perf-floor.org
air/v0.6/: OVERVIEW.org  embedding-gaps.org  harness.org
air/v0.7/: quorum-mesh.org
air/v0.8/: test-amplification.org
air/v0.9/: portable-snapshots.org
bench/: RESULTS.md  k3s-native.sh  microvm-ab.sh  microvm-boot.sh
guests/: microvm.nix
lib/: default.nix  harness.nix  microvm.nix
lib/cpu-templates/: amx-mask.json  amx-mask.json.sha256
modules/: addons.nix  control-plane.nix  datastore.nix  default.nix  dns.nix  lb.nix  network.nix  node.nix  pki.nix  storage.nix
pkgs/: cpuid-probe.nix  kubenyx-lb.nix  kubenyx-tools.nix  native-bench.nix  pause-image.nix  prebake-store.nix  readiness-wrapper.nix  test-image.nix
rust/: Cargo.toml
rust/etcd-mem/: Cargo.toml  build.rs
rust/etcd-mem/proto/: rpc.proto
rust/etcd-mem/src/: lib.rs  main.rs  store.rs  svc.rs
rust/kubenyx/: Cargo.toml
rust/kubenyx-clockstep/: Cargo.toml
rust/kubenyx-clockstep/src/: lib.rs  main.rs
rust/kubenyx-lb/: Cargo.toml
rust/kubenyx-lb/src/: lib.rs  main.rs
rust/kubenyx-lb/tests/: smoke.rs
rust/kubenyx-pki/: Cargo.toml
rust/kubenyx-pki/src/: lib.rs  main.rs
rust/kubenyx-ready/: Cargo.toml
rust/kubenyx-ready/src/: lib.rs  main.rs
rust/kubenyx-snap/: Cargo.toml
rust/kubenyx-snap/src/: lib.rs  main.rs
rust/kubenyx-tls/: Cargo.toml
rust/kubenyx-tls/src/: lib.rs
rust/kubenyx/src/: main.rs
rust/kubenyx/tests/: dispatch.rs  smoke.rs
templates/default/: flake.nix
tests/: agent-add.nix  bench-vs-k3s.nix  ca-custody.nix  external-cni.nix  failover.nix  harness-snapshot.nix  harness.nix  ipv6-multi.nix  ipv6.nix  lib-tests.nix  local-storage.nix  multi-node-mem.nix  multi-node.nix  multi-server.nix  prebake-bench.nix  prebake.nix  quorum-volatile.nix  server-add.nix  server-reboot.nix  single-node-etcd.nix  single-node.nix  snapshot-mint.nix  snapshot-restore.nix
