[package]
name    = "etcd-mem"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic        = { version = "0.12", default-features = false, features = ["codegen", "transport", "prost"] }
prost        = "0.13"
tokio        = { version = "1",    features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "time", "signal"] }
tokio-stream = { version = "0.1",  features = ["net"] }
tonic-health = "0.12"

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = ["prost"] }
