[package]
name = "kubenyx-snap"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
# Both already in the workspace lockfile (kubenyx-ready / kubenyx-pki), so
# the quorum-write probe adds zero new crates to the closure.
rustls-pemfile = "2"
base64 = "0.22"
libc = "0.2"
kubenyx-tls = { path = "../kubenyx-tls" }
